strategy pattern, better recursion - optimalizuj, oneSideOpt takes set, doesnt work for speciation yet